* Fix position of map changer (#3686)
* Fix bug of layers list overflowing

--- a/src/app/@ansyn/ansyn/modules/entities-table/components/entities-table/entities-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/entities-table/components/entities-table/entities-table.component.less
@@ -42,7 +42,7 @@
 	div.entities-table {
 		display: flex;
 		flex-direction: column;
-		height: 80%;
+		height: calc(100% - 36px);
 
 		div.entities-table-head {
 			display: flex;
@@ -125,7 +125,7 @@
 				}
 
 				div.entities-table-body-row-data {
-					margin: 10px 0;
+					margin: 9px 0;
 					display: flex;
 					align-items: center;
 					cursor: pointer;
