--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer-menu/layer-menu.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer-menu/layer-menu.component.less
@@ -1,7 +1,9 @@
-
-
-:host {
+.container {
+	padding-bottom: 2px;
 	display: flex;
 	flex-direction: row;
 
+	button i::before{
+		font-size: 18px;
+	}
 }
