--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
@@ -80,6 +80,11 @@
 
 		.layer {
 			max-height: 25%;
+			display: flex;
+
+			ansyn-static-layers, ansyn-annotation-layers, ansyn-base-layers {
+				width: 100%;
+			}
 		}
 	}
 
